# libsearch-studio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  OPS.md  README.md
.github/workflows/: ci.yml  release.yml
crates/ls-app/: Cargo.toml
crates/ls-app/src/: discover.rs  lib.rs  maintenance.rs  plan.rs  service.rs  settings.rs  store.rs  types.rs
crates/ls-app/tests/: caps_probe.rs  maintenance_guards.rs  plan_guards.rs  rechunk_e2e.rs
crates/ls-artifacts/: Cargo.toml
crates/ls-artifacts/src/: lib.rs
crates/ls-cli/: Cargo.toml
crates/ls-cli/src/: citemetric.rs  main.rs
crates/ls-core/: Cargo.toml
crates/ls-core/src/: lib.rs
crates/ls-embed/: Cargo.toml
crates/ls-embed/examples/: bench_embed.rs  bench_rerank.rs
crates/ls-embed/src/: lib.rs
crates/ls-embed/tests/: parity.rs  reranker.rs
crates/ls-embed/tests/fixtures/: bge_m3_parity.json
crates/ls-extract/: Cargo.toml
crates/ls-extract/src/: convert.rs  ebook.rs  lib.rs  office.rs  text.rs
crates/ls-index/: Cargo.toml
crates/ls-index/examples/: chunk_demo.rs
crates/ls-index/src/: chunk.rs  lib.rs  store.rs
crates/ls-index/tests/: store_scan.rs
crates/ls-llm/: Cargo.toml
crates/ls-llm/src/: lib.rs
crates/ls-llm/tests/: answer_fixtures.rs
crates/ls-query/: Cargo.toml
crates/ls-query/src/: lib.rs
crates/ls-query/tests/: fusion_fixtures.rs  golden_set.rs
crates/ls-query/tests/fixtures/corpus/: bloom.md  k8s-ru.md  options.md  portfolio-ru.md  replication-ru.md  rust-ownership.md  sagas.md  tcp.md
docs/: RELEASING.md  ROADMAP-2.md  ROADMAP-3.md  ROADMAP.md  USER_GUIDE.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: copy-pdfjs-assets.mjs
frontend/src/: App.tsx  BookReader.tsx  PdfReader.tsx  styles.css  vite-env.d.ts
frontend/src/lib/: cite.ts
scripts/: bench_corpus.py  bench_embed_py.py  dev-cli.sh  export_onnx.py  gen_parity_fixture.py  gpu_embed.py  index_to_parquet.py  make_dmg.sh  ocr_calibrate.py  ocr_pdf.py  publish_release.sh  quantize_onnx.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tools/dom-cite-harness/: README.md  index.html
