[workspace]
resolver = "2"
members = [
    "crates/ls-core",
    "crates/ls-index",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/timofey/libsearch-studio"

[workspace.dependencies]
ls-core = { path = "crates/ls-core" }
serde = { version = "1", features = ["derive"] }
regex = "1"
thiserror = "2"
