[workspace]
resolver = "2"
members = [
    "crates/ls-core",
    "crates/ls-index",
    "crates/ls-embed",
    "crates/ls-extract",
    "crates/ls-query",
    "crates/ls-llm",
    "crates/ls-app",
    "crates/ls-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/timofey/libsearch-studio"

[workspace.dependencies]
ls-core = { path = "crates/ls-core" }
ls-index = { path = "crates/ls-index" }
ls-embed = { path = "crates/ls-embed" }
ls-extract = { path = "crates/ls-extract" }
ls-query = { path = "crates/ls-query" }
ls-llm = { path = "crates/ls-llm" }
serde = { version = "1", features = ["derive"] }
regex = "1"
thiserror = "2"
