[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
ls-app = { path = "../crates/ls-app" }
ls-embed = { path = "../crates/ls-embed" }
ls-llm = { path = "../crates/ls-llm" }
ls-query = { path = "../crates/ls-query" }
ls-index = { path = "../crates/ls-index" }
