[package]
name = "app"
version = "0.8.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util"] }
ls-app = { path = "../crates/ls-app" }
ls-embed = { path = "../crates/ls-embed" }
ls-llm = { path = "../crates/ls-llm" }
ls-query = { path = "../crates/ls-query" }
ls-index = { path = "../crates/ls-index" }
ls-artifacts = { path = "../crates/ls-artifacts" }
