[package]
name = "ls-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ls-core = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
