[package]
name = "ls-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ls-core = { workspace = true }
lopdf = "0.36"
regex = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "0.1"
scraper = "0.23"
ego-tree = "0.10"
rbook = "0.6.11"
html2text = "0.17.1"
zip = { version = "7", default-features = false, features = ["deflate"] }
mobi = "0.8.0"
quick-xml = { version = "0.41", features = ["encoding"] }
rtf-parser = "0.4.3"
