[package]
name = "ls-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ls-core = { workspace = true }
regex = { workspace = true }
lancedb = "0.21"
arrow-array = "55"
arrow-schema = "55"
parquet = "55"
futures = "0.3"
thiserror = { workspace = true }
