[package]
name = "ls-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ls-query = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1"
futures = "0.3"
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
