[package]
name = "ls-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ls-core = { workspace = true }
ls-index = { workspace = true }
ls-embed = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
